--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <head>
         <Title>Alexander Gabriel Lovett's Portfolio</Title>
         <meta charset="UTF-8">
-       <!--<link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
-       <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> 
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body>
