--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
             <div class="inner">
                     <h1 id="aboutMe">About Me</h1>
                     <div class="aboutMe">
-                        <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
-                        <p>Horror Movie Enthusiast, electronics tinkerer, 3D printerer, and aspiring web developer. I graduated from Georgia Tech, then worked briefly in San Diego, CA for a genetics company before moving up to Nyack, NY where I currently work for a dental prosthetics manufacturer.    
+                        <img class="wrap" src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                        <p>Horror Movie Enthusiast, electronics tinkerer, 3D printerer, and aspiring web developer. I graduated from Georgia Tech, then worked briefly in San Diego, CA for a genetics company before moving up to Nyack, NY where I currently work for a dental prosthetics manufacturer.  
                         <br>
                         <br>
-                        I think I'm going to prefer the backend, but I do love art so hopefully css won't be that bad. </p>
+                        I think I'm going to prefer the backend, but I do love art so hopefully css won't be that bad.
+                        <br>
+                        <br> 
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                     </div>
             </div>
         </div>
