--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,18 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
+
         <header>
-            <div class="headerLeft">Alexander G Lovett</div>
-            <ul class="headerNavigation">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <nav class="headerNav">
+                <h1 class="headerLeft">Alexander G Lovett</h1>
+                <ul class="headerNavigation">
+                    <li><a href="index.html">About</a></li>
+                    <li class="sep">|</li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li class="sep">|</li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <div>
@@ -24,11 +29,11 @@
                 Message:<br>
                 <input type="text" name="message"><br>
                 <input type="submit" value="Submit">
+                <button type="submit"><a href="mailto:example@email.com">buttons</a></button>
             </form>
         </div>
 
-        <footer>
-            <div>Copyright Alexander G. Lovett 2018</div>
-        </footer>
+        <footer class="footer">Copyright ©</footer>
+        sd
     </body>
 </html>
