--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <ul class="headerNavigation">
                         <li><a href="#">About</a></li>
                         <li class="sep">|</li>
-                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
                         <li class="sep">|</li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
