--- a/portfolio.html
+++ b/portfolio.html
@@ -8,14 +8,18 @@
     </head>
 
     <body>
-        <header>
-            <div class="headerleft">Alexander G Lovett</div>
-            <div class="headerright">
-                <div>About</div>
-                <div>Portfolio</div>
-                <div>Contact</div>
-            </div>
-        </header>
+            <header>
+                    <nav class="headerNav">
+                        <h1 class="headerLeft">Alexander G Lovett</h1>
+                        <ul class="headerNavigation">
+                            <li><a href="index.html">About</a></li>
+                            <li class="sep">|</li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li class="sep">|</li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </header>
 
         <div>
                 <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
@@ -30,9 +34,7 @@
                 <br>
         </div>
 
-        <footer>
-            <div>Copywrite Alex Lovett 2018</div>
-        </footer>
+        <footer class="footer">Copyright ©</footer>
 
     </body>
 
