Labels over images!

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,17 +21,41 @@
                     </nav>
                 </header>
 
-        <div>
-                <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
-                <br>
-                <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
-                <br>
-                <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
-                <br>
-                <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
-                <br>
-                <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
-                <br>
+        <div class="content">
+            <div class="inner">
+                <div class="portfolio-images">
+                    <div class="proj">
+                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <div class="label">
+                                <h4>Project 1</h4>
+                            </div>
+                    </div>
+                    <div class="proj">
+                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <div class="label">
+                                <h4>Project 2</h4>
+                            </div>
+                    </div>  
+                    <div class="proj">
+                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <div class="label">
+                                <h4>Project 3</h4>
+                            </div>
+                    </div>
+                    <div class="proj">
+                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <div class="label">
+                                <h4>Project 4</h4>
+                            </div>
+                    </div>
+                    <div class="proj">
+                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <div class="label">
+                                <h4>Project 5</h4>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <footer class="footer">Copyright ©</footer>
