--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
             </nav>
         </header>
 
-        <div>
-            <form>
+        <div class="content">
+            <form class="inner">
                 Name:<br>
                 <input type="text" name="name"><br>
                 Email:<br>
@@ -34,6 +34,5 @@
         </div>
 
         <footer class="footer">Copyright ©</footer>
-        sd
     </body>
 </html>
