--- a/portfolio.html
+++ b/portfolio.html
@@ -22,36 +22,36 @@
                 </header>
 
         <div class="content">
-            <div class="inner">
+            <div class="inner-port">
                 <div class="portfolio-images">
                     <div class="proj">
-                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <img src="https://i.dailymail.co.uk/i/pix/2013/01/14/article-2262245-0922158E000005DC-917_634x525.jpg" alt="Placeholder Image here" height=200px; width=200px;>
                             <div class="label">
-                                <h4>Project 1</h4>
+                                <h3>Hangman</h3>
                             </div>
                     </div>
                     <div class="proj">
-                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <img src="https://images.pexels.com/photos/168866/pexels-photo-168866.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Placeholder Image here" height=200px; width=200px;>
                             <div class="label">
-                                <h4>Project 2</h4>
+                                <h3>RPG Game</h3>
                             </div>
                     </div>  
                     <div class="proj">
-                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <img src="https://images.pexels.com/photos/53209/newspaper-news-media-spectacles-53209.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Placeholder Image here" height=200px; width=200px;>
                             <div class="label">
-                                <h4>Project 3</h4>
+                                <h3>Trivia Game</h3>
                             </div>
                     </div>
                     <div class="proj">
-                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <img src="https://images.pexels.com/photos/256541/pexels-photo-256541.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Placeholder Image here" height=200px; width=200px;>
                             <div class="label">
-                                <h4>Project 4</h4>
+                                <h3>Rutgers Info Widget</h3>
                             </div>
                     </div>
                     <div class="proj">
-                            <img src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                            <img src="https://images.pexels.com/photos/1249214/pexels-photo-1249214.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Placeholder Image here" height=200px; width=200px;>
                             <div class="label">
-                                <h4>Project 5</h4>
+                                <h3>Rock Paper Scissors</h3>
                             </div>
                     </div>
                 </div>
