--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
 
         <div class="content">
             <form class="inner">
+                <h1 id="aboutMe">Contact</h1>
                 Name:<br>
                 <input type="text" name="name"><br>
                 Email:<br>
