--- a/contact.html
+++ b/contact.html
@@ -23,14 +23,13 @@
         <div class="content">
             <form class="inner">
                 <h1 id="aboutMe">Contact</h1>
-                Name:<br>
-                <input type="text" name="name"><br>
-                Email:<br>
-                <input type="text" name="email"><br>
-                Message:<br>
-                <input type="text" name="message"><br>
+                Name<br>
+                <input type="text" name="name" size="152"><br>
+                Email<br>
+                <input type="text" name="email" size="152"><br>
+                Message<br>
+                <textarea type="text" name="message" size="152"></textarea><br>
                 <input type="submit" value="Submit">
-                <button type="submit"><a href="mailto:example@email.com">buttons</a></button>
             </form>
         </div>
 
