--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,17 @@
         </header>
 
         <div class="content">
-            <form class="inner">
+            <form class="inner-contact">
                 <h1 id="aboutMe">Contact</h1>
-                Name<br>
-                <input type="text" name="name" size="152"><br>
-                Email<br>
-                <input type="text" name="email" size="152"><br>
-                Message<br>
-                <textarea type="text" name="message" size="152"></textarea><br>
-                <input type="submit" value="Submit">
+                <div>
+                    <label>Name</label>
+                    <input type="text" name="name" size="155" placeholder="First Last"><br>
+                    <label>Email</label>
+                    <input type="text" name="email" size="155" placeholder="Email@address.com"><br>
+                    <label>Message</label>
+                    <textarea type="text" name="message" placeholder="Leave me a message"></textarea><br>
+                    <input type="submit" value="Submit">
+                </div>
             </form>
         </div>
 
