--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <Title>Alexander Gabriel Lovett's Portfolio</Title>
+        <Title>About Alex</Title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
@@ -26,7 +26,7 @@
             <div class="inner">
                     <h1 id="aboutMe">About Me</h1>
                     <div class="aboutMe">
-                        <img class="wrap" src="https://via.placeholder.com/200C/" alt="Placeholder Image here" height=200px; width=200px;>
+                        <img class="wrap" src="assets/images/bio.jpg" alt="Placeholder Image here" height=200px; width=200px;>
                         <p>Horror Movie Enthusiast, electronics tinkerer, 3D printerer, and aspiring web developer. I graduated from Georgia Tech, then worked briefly in San Diego, CA for a genetics company before moving up to Nyack, NY where I currently work for a dental prosthetics manufacturer.  
                         <br>
                         <br>
