--- a/portfolio.html
+++ b/portfolio.html
@@ -2,16 +2,16 @@
 <html>
 
     <head>
-        <Title>Alexander Gabriel Lovett's Portfolio</Title>
+        <Title>Alex's Portfolio</Title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body>
             <header>
-                    <nav class="headerNav">
+                    <nav class="topNav">
                         <h1 class="headerLeft">Alexander G Lovett</h1>
-                        <ul class="headerNavigation">
+                        <ul class="nav">
                             <li><a href="index.html">About</a></li>
                             <li class="sep">|</li>
                             <li><a href="#">Portfolio</a></li>
@@ -23,7 +23,7 @@
 
         <div class="content">
             <div class="inner-port">
-                <h1 id="aboutMe">Portfolio</h1>
+                <h1 id="blueHeading">Portfolio</h1>
                 <div class="portfolio-images">
                     <div class="proj">
                             <img src="https://i.dailymail.co.uk/i/pix/2013/01/14/article-2262245-0922158E000005DC-917_634x525.jpg" alt="Placeholder Image here" height=200px; width=200px;>
