--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <Title>Contact Alexander Gabriel Lovett</Title>
+        <Title>Contact Alex</Title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
 
         <header>
-            <nav class="headerNav">
+            <nav class="topNav">
                 <h1 class="headerLeft">Alexander G Lovett</h1>
-                <ul class="headerNavigation">
+                <ul class="nav">
                     <li><a href="index.html">About</a></li>
                     <li class="sep">|</li>
                     <li><a href="portfolio.html">Portfolio</a></li>
@@ -22,7 +22,7 @@
 
         <div class="content">
             <form class="inner-contact">
-                <h1 id="aboutMe">Contact</h1>
+                <h1 id="blueHeading">Contact</h1>
                 <div>
                     <label>Name</label>
                     <input type="text" name="name" size="140" placeholder="First Last"><br>
