--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
 
         <header>
-            <nav class="headerNav">
+            <nav class="topNav">
                 <h1 class="headerLeft">Alexander G Lovett</h1>
-                <ul class="headerNavigation">
+                <ul class="nav">
                         <li><a href="#">About</a></li>
                         <li class="sep">|</li>
                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -24,10 +24,9 @@
 
         <div class="content">
             <div class="inner">
-                    <h1 id="aboutMe">About Me</h1>
+                    <h1 id="blueHeading">About Me</h1>
                     <div class="aboutMe">
                         <img class="wrap" src="assets/images/bio.jpg" alt="https://via.placeholder.com/200C/" height=200px; width=200px; title="DragonCon, 2018">
-                        <p class="tooltip">DragonCon, 2018</p>
                         <p>Horror Movie Enthusiast, electronics tinkerer, 3D printerer, and aspiring web developer. I graduated from Georgia Tech, then worked briefly in San Diego, CA for a genetics company before moving up to Nyack, NY where I currently work for a dental prosthetics manufacturer.  
                         <br>
                         <br>
