--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <Title>Contact Alex</Title>
@@ -29,7 +29,7 @@
                     <label>Email</label>
                     <input type="text" name="email" size="140" placeholder="Email@address.com"><br>
                     <label>Message</label>
-                    <textarea type="text" name="message" placeholder="Leave me a message"></textarea><br>
+                    <textarea name="message" placeholder="Leave me a message"></textarea><br>
                     <input type="submit" value="Submit">
                 </div>
             </form>
