--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <Title>About Alex</Title>
@@ -26,7 +26,7 @@
             <div class="inner">
                     <h1 id="blueHeading">About Me</h1>
                     <div class="aboutMe">
-                        <img class="wrap" src="assets/images/bio.jpg" alt="https://via.placeholder.com/200C/" height=200px; width=200px; title="DragonCon, 2018">
+                        <img class="wrap" src="assets/images/bio.jpg" alt="https://via.placeholder.com/200C/" height=200 width=200 title="DragonCon, 2018">
                         <p>Horror Movie Enthusiast, electronics tinkerer, 3D printerer, and aspiring web developer. I graduated from Georgia Tech, then worked briefly in San Diego, CA for a genetics company before moving up to Nyack, NY where I currently work for a dental prosthetics manufacturer.  
                         <br>
                         <br>
